# howitzer

./: .gitignore  .gitmodules  Cargo.toml  LICENSE.md  README.md  justfile
.github/workflows/: rust_ci.yaml  sol_test.yaml
contracts/: README.md  foundry.toml
contracts/test/: Counter.t.sol
crates/fpvm/: Cargo.toml  README.md
crates/fpvm/benches/: execution.rs  memory.rs
crates/fpvm/bindings/: README.md  bindings.sh
crates/fpvm/open_mips_tests/: maketests.py
crates/fpvm/open_mips_tests/test/: dadd.asm  daddi.asm  daddiu.asm  daddu.asm  ddivu.asm  dsub.asm  dsubu.asm  oracle_unaligned_read.asm  scd.asm
crates/fpvm/src/: lib.rs
crates/fpvm/src/evm/: mod.rs
crates/fpvm/src/memory/: map_memory.rs  mem_trait.rs  mod.rs  page.rs  reader.rs  tree_memory.rs  trie.rs  trie_memory.rs
crates/fpvm/src/mips/: cpu.rs  error.rs  instrumented.rs  isa.rs  linux.rs  mips_instruction.rs  mips_isa.rs  mips_linux.rs  mips_vm.rs  mod.rs  proof.rs  vm.rs
crates/fpvm/src/state/: mod.rs  step_witness.rs  vm_state.rs
crates/fpvm/src/test_utils/: mod.rs
crates/fpvm/src/types/: mod.rs  state.rs  witness.rs
crates/fpvm/src/utils/: meta.rs  mod.rs  patch.rs  ser.rs  stack.rs
crates/howitzer/: README.md
crates/howitzer/src/: builder.rs  lib.rs  types.rs
crates/kernel/: Cargo.toml  README.md
crates/kernel/src/: builder.rs  gz.rs  kernel.rs  proc_oracle.rs  types.rs  utils.rs
docker/: README.md  build.sh  howitzer.dockerfile
example/: Makefile  justfile
