[workspace]
members = ["bin", "crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["clabby"]

[workspace.dependencies]
# ETH types
alloy-primitives = "0.7.7"

# kona
kona-preimage = { git = "https://github.com/ethereum-optimism/kona", rev = "e069eb4" }
kona-common = { git = "https://github.com/ethereum-optimism/kona", rev = "e069eb4" }

# ser
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"

# runtime
tokio = { version = "1.38.0", features = ["full"] }

# misc
anyhow = "1.0.86"
tracing = "0.1.40"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
debug = false

[profile.dev]
overflow-checks = false

[profile.bench]
debug = true
