[package]
name = "howitzer-fpvm"
description = "An implementation of the Howitzer Fault Proof VM"
edition = "2021"

version.workspace = true
authors.workspace = true

[dependencies]
# workspace
alloy-primitives.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tokio.workspace = true
kona-preimage.workspace = true
kona-common.workspace = true
tracing.workspace = true

# external
async-trait = "0.1.81"
alloy-sol-types = "0.7.7"
once_cell = "1.19.0"
elf = "0.7.4"

# hashing
rustc-hash = "2.0.0"
xkcp-rs = { git = "https://github.com/DaniPopes/xkcp-rs", rev = "40447a5" }
keccak256-aarch64-simd = { git = "https://github.com/clabby/keccak256-aarch64", rev = "5c4c8f8", optional = true }

# evm
revm = { version = "12.1.0", optional = true }

[dev-dependencies]
rand = "0.8.5"
criterion = { version = "0.5.1", features = ["html_reports", "async_tokio"] }
pprof = { version = "0.13.0", features = ["criterion", "flamegraph", "frame-pointer"] } 
proptest = "1.4.0"

[features]
mipsevm = ["dep:revm"]
simd-keccak = ["dep:keccak256-aarch64-simd"]
test-utils = []

[[bench]]
name = "memory"
harness = false

[[bench]]
name = "execution"
harness = false
